pao-web/src/app/parser/PaoParser.ts
// Generated from Pao.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { PaoListener } from "./PaoListener";
import { PaoVisitor } from "./PaoVisitor";


export class PaoParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly COLON = 2;
	public static readonly SYSTEM_NAME = 3;
	public static readonly NAME = 4;
	public static readonly DOMAIN_EVENT = 5;
	public static readonly COMMAND = 6;
	public static readonly CONCEPT = 7;
	public static readonly ENTER_RULE = 8;
	public static readonly INPUT_RULE = 9;
	public static readonly FIELD = 10;
	public static readonly COMMENT_TEXT = 11;
	public static readonly EXT_SYSTEM = 12;
	public static readonly SCHEDULER = 13;
	public static readonly ROLE = 14;
	public static readonly LBRACK = 15;
	public static readonly RBRACK = 16;
	public static readonly COMMA = 17;
	public static readonly NEWSECTION = 18;
	public static readonly WS = 19;
	public static readonly COMMENT = 20;
	public static readonly LINE_COMMENT = 21;
	public static readonly IDENTIFIER = 22;
	public static readonly RULE_compilationUnit = 0;
	public static readonly RULE_systemNameDeclaration = 1;
	public static readonly RULE_typeDeclaration = 2;
	public static readonly RULE_typeRuleDeclaration = 3;
	public static readonly RULE_nameDeclaration = 4;
	public static readonly RULE_domainEventDeclaration = 5;
	public static readonly RULE_commandEventDeclaration = 6;
	public static readonly RULE_conceptDeclaration = 7;
	public static readonly RULE_commentTextDeclaration = 8;
	public static readonly RULE_extSystemDeclaration = 9;
	public static readonly RULE_schedulerDeclaration = 10;
	public static readonly RULE_roleDeclaration = 11;
	public static readonly RULE_enterRuleDeclaration = 12;
	public static readonly RULE_inputRuleDeclaration = 13;
	public static readonly RULE_fieldDeclaration = 14;
	public static readonly RULE_newSectionDeclaration = 15;
	public static readonly RULE_ruleList = 16;
	public static readonly RULE_fieldList = 17;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"compilationUnit", "systemNameDeclaration", "typeDeclaration", "typeRuleDeclaration", 
		"nameDeclaration", "domainEventDeclaration", "commandEventDeclaration", 
		"conceptDeclaration", "commentTextDeclaration", "extSystemDeclaration", 
		"schedulerDeclaration", "roleDeclaration", "enterRuleDeclaration", "inputRuleDeclaration", 
		"fieldDeclaration", "newSectionDeclaration", "ruleList", "fieldList",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "','", undefined, "'\u7CFB\u7EDF\u540D\u79F0'", "'\u540D\u79F0'", 
		"'\u9886\u57DF\u4E8B\u4EF6'", "'\u51B3\u7B56\u547D\u4EE4'", "'\u9886\u57DF\u540D\u8BCD'", 
		"'\u51FA\u89C4\u5219'", "'\u5165\u89C4\u5219'", "'\u5B57\u6BB5'", "'\u6CE8\u91CA'", 
		"'\u5916\u90E8\u7CFB\u7EDF'", "'\u5B9A\u65F6\u4EFB\u52A1'", "'\u89D2\u8272'", 
		"'['", "']'", undefined, "'\nn'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, "COLON", "SYSTEM_NAME", "NAME", "DOMAIN_EVENT", 
		"COMMAND", "CONCEPT", "ENTER_RULE", "INPUT_RULE", "FIELD", "COMMENT_TEXT", 
		"EXT_SYSTEM", "SCHEDULER", "ROLE", "LBRACK", "RBRACK", "COMMA", "NEWSECTION", 
		"WS", "COMMENT", "LINE_COMMENT", "IDENTIFIER",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(PaoParser._LITERAL_NAMES, PaoParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return PaoParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Pao.g4"; }

	// @Override
	public get ruleNames(): string[] { return PaoParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return PaoParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(PaoParser._ATN, this);
	}
	// @RuleVersion(0)
	public compilationUnit(): CompilationUnitContext {
		let _localctx: CompilationUnitContext = new CompilationUnitContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, PaoParser.RULE_compilationUnit);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 36;
			this.systemNameDeclaration();
			this.state = 40;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PaoParser.NAME) | (1 << PaoParser.DOMAIN_EVENT) | (1 << PaoParser.COMMAND) | (1 << PaoParser.CONCEPT) | (1 << PaoParser.ENTER_RULE) | (1 << PaoParser.INPUT_RULE) | (1 << PaoParser.FIELD) | (1 << PaoParser.COMMENT_TEXT) | (1 << PaoParser.EXT_SYSTEM) | (1 << PaoParser.SCHEDULER) | (1 << PaoParser.ROLE) | (1 << PaoParser.NEWSECTION))) !== 0)) {
				{
				{
				this.state = 37;
				this.typeDeclaration();
				}
				}
				this.state = 42;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 43;
			this.match(PaoParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public systemNameDeclaration(): SystemNameDeclarationContext {
		let _localctx: SystemNameDeclarationContext = new SystemNameDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, PaoParser.RULE_systemNameDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 45;
			this.match(PaoParser.SYSTEM_NAME);
			this.state = 46;
			this.match(PaoParser.COLON);
			this.state = 47;
			this.match(PaoParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeDeclaration(): TypeDeclarationContext {
		let _localctx: TypeDeclarationContext = new TypeDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, PaoParser.RULE_typeDeclaration);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 49;
			this.typeRuleDeclaration();
			this.state = 53;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 50;
					this.typeRuleDeclaration();
					}
					}
				}
				this.state = 55;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeRuleDeclaration(): TypeRuleDeclarationContext {
		let _localctx: TypeRuleDeclarationContext = new TypeRuleDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, PaoParser.RULE_typeRuleDeclaration);
		try {
			this.state = 68;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PaoParser.DOMAIN_EVENT:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 56;
				this.domainEventDeclaration();
				}
				break;
			case PaoParser.NAME:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 57;
				this.nameDeclaration();
				}
				break;
			case PaoParser.CONCEPT:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 58;
				this.conceptDeclaration();
				}
				break;
			case PaoParser.COMMAND:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 59;
				this.commandEventDeclaration();
				}
				break;
			case PaoParser.ENTER_RULE:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 60;
				this.enterRuleDeclaration();
				}
				break;
			case PaoParser.INPUT_RULE:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 61;
				this.inputRuleDeclaration();
				}
				break;
			case PaoParser.COMMENT_TEXT:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 62;
				this.commentTextDeclaration();
				}
				break;
			case PaoParser.EXT_SYSTEM:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 63;
				this.extSystemDeclaration();
				}
				break;
			case PaoParser.SCHEDULER:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 64;
				this.schedulerDeclaration();
				}
				break;
			case PaoParser.ROLE:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 65;
				this.roleDeclaration();
				}
				break;
			case PaoParser.FIELD:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 66;
				this.fieldDeclaration();
				}
				break;
			case PaoParser.NEWSECTION:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 67;
				this.newSectionDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public nameDeclaration(): NameDeclarationContext {
		let _localctx: NameDeclarationContext = new NameDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, PaoParser.RULE_nameDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 70;
			this.match(PaoParser.NAME);
			this.state = 71;
			this.match(PaoParser.COLON);
			this.state = 72;
			this.match(PaoParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public domainEventDeclaration(): DomainEventDeclarationContext {
		let _localctx: DomainEventDeclarationContext = new DomainEventDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, PaoParser.RULE_domainEventDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 74;
			this.match(PaoParser.DOMAIN_EVENT);
			this.state = 75;
			this.match(PaoParser.COLON);
			this.state = 76;
			this.match(PaoParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public commandEventDeclaration(): CommandEventDeclarationContext {
		let _localctx: CommandEventDeclarationContext = new CommandEventDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, PaoParser.RULE_commandEventDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 78;
			this.match(PaoParser.COMMAND);
			this.state = 79;
			this.match(PaoParser.COLON);
			this.state = 80;
			this.match(PaoParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public conceptDeclaration(): ConceptDeclarationContext {
		let _localctx: ConceptDeclarationContext = new ConceptDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, PaoParser.RULE_conceptDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 82;
			this.match(PaoParser.CONCEPT);
			this.state = 83;
			this.match(PaoParser.COLON);
			this.state = 84;
			this.match(PaoParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public commentTextDeclaration(): CommentTextDeclarationContext {
		let _localctx: CommentTextDeclarationContext = new CommentTextDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, PaoParser.RULE_commentTextDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 86;
			this.match(PaoParser.COMMENT_TEXT);
			this.state = 87;
			this.match(PaoParser.COLON);
			this.state = 88;
			this.match(PaoParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public extSystemDeclaration(): ExtSystemDeclarationContext {
		let _localctx: ExtSystemDeclarationContext = new ExtSystemDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, PaoParser.RULE_extSystemDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 90;
			this.match(PaoParser.EXT_SYSTEM);
			this.state = 91;
			this.match(PaoParser.COLON);
			this.state = 92;
			this.match(PaoParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public schedulerDeclaration(): SchedulerDeclarationContext {
		let _localctx: SchedulerDeclarationContext = new SchedulerDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, PaoParser.RULE_schedulerDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 94;
			this.match(PaoParser.SCHEDULER);
			this.state = 95;
			this.match(PaoParser.COLON);
			this.state = 96;
			this.match(PaoParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public roleDeclaration(): RoleDeclarationContext {
		let _localctx: RoleDeclarationContext = new RoleDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, PaoParser.RULE_roleDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 98;
			this.match(PaoParser.ROLE);
			this.state = 99;
			this.match(PaoParser.COLON);
			this.state = 100;
			this.match(PaoParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public enterRuleDeclaration(): EnterRuleDeclarationContext {
		let _localctx: EnterRuleDeclarationContext = new EnterRuleDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, PaoParser.RULE_enterRuleDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 102;
			this.match(PaoParser.ENTER_RULE);
			this.state = 103;
			this.match(PaoParser.COLON);
			this.state = 106;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				{
				this.state = 104;
				this.match(PaoParser.IDENTIFIER);
				}
				break;

			case 2:
				{
				this.state = 105;
				this.ruleList();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public inputRuleDeclaration(): InputRuleDeclarationContext {
		let _localctx: InputRuleDeclarationContext = new InputRuleDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, PaoParser.RULE_inputRuleDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 108;
			this.match(PaoParser.INPUT_RULE);
			this.state = 109;
			this.match(PaoParser.COLON);
			this.state = 112;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				{
				this.state = 110;
				this.match(PaoParser.IDENTIFIER);
				}
				break;

			case 2:
				{
				this.state = 111;
				this.ruleList();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldDeclaration(): FieldDeclarationContext {
		let _localctx: FieldDeclarationContext = new FieldDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, PaoParser.RULE_fieldDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 114;
			this.match(PaoParser.FIELD);
			this.state = 115;
			this.match(PaoParser.COLON);
			this.state = 116;
			this.fieldList();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public newSectionDeclaration(): NewSectionDeclarationContext {
		let _localctx: NewSectionDeclarationContext = new NewSectionDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, PaoParser.RULE_newSectionDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 118;
			this.match(PaoParser.NEWSECTION);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ruleList(): RuleListContext {
		let _localctx: RuleListContext = new RuleListContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, PaoParser.RULE_ruleList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 120;
			this.match(PaoParser.IDENTIFIER);
			this.state = 128;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PaoParser.T__0) {
				{
				{
				this.state = 121;
				this.match(PaoParser.T__0);
				this.state = 123;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PaoParser.WS) {
					{
					this.state = 122;
					this.match(PaoParser.WS);
					}
				}

				this.state = 125;
				this.match(PaoParser.IDENTIFIER);
				}
				}
				this.state = 130;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldList(): FieldListContext {
		let _localctx: FieldListContext = new FieldListContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, PaoParser.RULE_fieldList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 131;
			this.match(PaoParser.LBRACK);
			this.state = 135;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PaoParser.NAME) | (1 << PaoParser.DOMAIN_EVENT) | (1 << PaoParser.COMMAND) | (1 << PaoParser.CONCEPT) | (1 << PaoParser.ENTER_RULE) | (1 << PaoParser.INPUT_RULE) | (1 << PaoParser.FIELD) | (1 << PaoParser.COMMENT_TEXT) | (1 << PaoParser.EXT_SYSTEM) | (1 << PaoParser.SCHEDULER) | (1 << PaoParser.ROLE) | (1 << PaoParser.NEWSECTION))) !== 0)) {
				{
				{
				this.state = 132;
				this.typeRuleDeclaration();
				}
				}
				this.state = 137;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 138;
			this.match(PaoParser.RBRACK);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!PaoParser.__ATN) {
			PaoParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(PaoParser._serializedATN));
		}

		return PaoParser.__ATN;
	}

}

export class CompilationUnitContext extends ParserRuleContext {
	public systemNameDeclaration(): SystemNameDeclarationContext {
		return this.getRuleContext(0, SystemNameDeclarationContext);
	}
	public EOF(): TerminalNode { return this.getToken(PaoParser.EOF, 0); }
	public typeDeclaration(): TypeDeclarationContext[];
	public typeDeclaration(i: number): TypeDeclarationContext;
	public typeDeclaration(i?: number): TypeDeclarationContext | TypeDeclarationContext[] {
		if (i === undefined) {
			return this.getRuleContexts(TypeDeclarationContext);
		} else {
			return this.getRuleContext(i, TypeDeclarationContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return PaoParser.RULE_compilationUnit; }
	// @Override
	public enterRule(listener: PaoListener): void {
		if (listener.enterCompilationUnit) {
			listener.enterCompilationUnit(this);
		}
	}
	// @Override
	public exitRule(listener: PaoListener): void {
		if (listener.exitCompilationUnit) {
			listener.exitCompilationUnit(this);
		}
	}
	// @Override
	public accept<Result>(visitor: PaoVisitor<Result>): Result {
		if (visitor.visitCompilationUnit) {
			return visitor.visitCompilationUnit(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class SystemNameDeclarationContext extends ParserRuleContext {
	public SYSTEM_NAME(): TerminalNode { return this.getToken(PaoParser.SYSTEM_NAME, 0); }
	public COLON(): TerminalNode { return this.getToken(PaoParser.COLON, 0); }
	public IDENTIFIER(): TerminalNode { return this.getToken(PaoParser.IDENTIFIER, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return PaoParser.RULE_systemNameDeclaration; }
	// @Override
	public enterRule(listener: PaoListener): void {
		if (listener.enterSystemNameDeclaration) {
			listener.enterSystemNameDeclaration(this);
		}
	}
	// @Override
	public exitRule(listener: PaoListener): void {
		if (listener.exitSystemNameDeclaration) {
			listener.exitSystemNameDeclaration(this);
		}
	}
	// @Override
	public accept<Result>(visitor: PaoVisitor<Result>): Result {
		if (visitor.visitSystemNameDeclaration) {
			return visitor.visitSystemNameDeclaration(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class TypeDeclarationContext extends ParserRuleContext {
	public typeRuleDeclaration(): TypeRuleDeclarationContext[];
	public typeRuleDeclaration(i: number): TypeRuleDeclarationContext;
	public typeRuleDeclaration(i?: number): TypeRuleDeclarationContext | TypeRuleDeclarationContext[] {
		if (i === undefined) {
			return this.getRuleContexts(TypeRuleDeclarationContext);
		} else {
			return this.getRuleContext(i, TypeRuleDeclarationContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return PaoParser.RULE_typeDeclaration; }
	// @Override
	public enterRule(listener: PaoListener): void {
		if (listener.enterTypeDeclaration) {
			listener.enterTypeDeclaration(this);
		}
	}
	// @Override
	public exitRule(listener: PaoListener): void {
		if (listener.exitTypeDeclaration) {
			listener.exitTypeDeclaration(this);
		}
	}
	// @Override
	public accept<Result>(visitor: PaoVisitor<Result>): Result {
		if (visitor.visitTypeDeclaration) {
			return visitor.visitTypeDeclaration(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class TypeRuleDeclarationContext extends ParserRuleContext {
	public domainEventDeclaration(): DomainEventDeclarationContext | undefined {
		return this.tryGetRuleContext(0, DomainEventDeclarationContext);
	}
	public nameDeclaration(): NameDeclarationContext | undefined {
		return this.tryGetRuleContext(0, NameDeclarationContext);
	}
	public conceptDeclaration(): ConceptDeclarationContext | undefined {
		return this.tryGetRuleContext(0, ConceptDeclarationContext);
	}
	public commandEventDeclaration(): CommandEventDeclarationContext | undefined {
		return this.tryGetRuleContext(0, CommandEventDeclarationContext);
	}
	public enterRuleDeclaration(): EnterRuleDeclarationContext | undefined {
		return this.tryGetRuleContext(0, EnterRuleDeclarationContext);
	}
	public inputRuleDeclaration(): InputRuleDeclarationContext | undefined {
		return this.tryGetRuleContext(0, InputRuleDeclarationContext);
	}
	public commentTextDeclaration(): CommentTextDeclarationContext | undefined {
		return this.tryGetRuleContext(0, CommentTextDeclarationContext);
	}
	public extSystemDeclaration(): ExtSystemDeclarationContext | undefined {
		return this.tryGetRuleContext(0, ExtSystemDeclarationContext);
	}
	public schedulerDeclaration(): SchedulerDeclarationContext | undefined {
		return this.tryGetRuleContext(0, SchedulerDeclarationContext);
	}
	public roleDeclaration(): RoleDeclarationContext | undefined {
		return this.tryGetRuleContext(0, RoleDeclarationContext);
	}
	public fieldDeclaration(): FieldDeclarationContext | undefined {
		return this.tryGetRuleContext(0, FieldDeclarationContext);
	}
	public newSectionDeclaration(): NewSectionDeclarationContext | undefined {
		return this.tryGetRuleContext(0, NewSectionDeclarationContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return PaoParser.RULE_typeRuleDeclaration; }
	// @Override
	public enterRule(listener: PaoListener): void {
		if (listener.enterTypeRuleDeclaration) {
			listener.enterTypeRuleDeclaration(this);
		}
	}
	// @Override
	public exitRule(listener: PaoListener): void {
		if (listener.exitTypeRuleDeclaration) {
			listener.exitTypeRuleDeclaration(this);
		}
	}
	// @Override
	public accept<Result>(visitor: PaoVisitor<Result>): Result {
		if (visitor.visitTypeRuleDeclaration) {
			return visitor.visitTypeRuleDeclaration(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

